--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>முத்தாலம்மன் திருக்கோவில்</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/lightbox.min.css"/>
-    <script src="/js/lightbox-plus-jquery.min.js" type="text/javascript" ></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/lightbox.min.css"/>
+    <script src="./js/lightbox-plus-jquery.min.js" type="text/javascript" ></script>
 </head>
 <body>
     <header id="header">
