--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section> -->
     <div class ="full-screen-video-container">
         <video autoplay loop muted>
-            <source src="images/videobanner.mp4" type="video/mp4" />
+            <source src="./images/videobanner.mp4" type="video/mp4" />
         </video>
         <div class="full-screen-video-content">
             <p> ஊர்மேலழகியான் முத்தாலம்மன் திருக்கோவில்</p>
