--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <td>---</td>
                     </tr>
                     <tr>
-                        <td>Shankar Moorthy/td>
+                        <td>Shankar Moorthy</td>
                         <td>--</td>
                         <td>--</td>
                     </tr>
