video is not working in mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </section> -->
     <div class ="full-screen-video-container">
-        <video autoplay loop muted>
+        <video autoplay loop muted autobuffer playsinline>
             <source src="./images/videobanner.mp4" type="video/mp4" />
         </video>
         <div class="full-screen-video-content">
